--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -1,16 +1,8 @@
 {% extends 'classes/layout.html' %}
 
 {% block content %}
-<!-- <style>
-    .resultList{
-            margin-top: 10%;
-            margin-bottom: 10%;
-            margin-right: 20%;
-            margin-left: 20%;
-    }
-</style> -->
 <div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px; padding:5%">
-    <h2>Results</h2>
+    <h4 style="color:white;">Results</h4>
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
