--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -1,8 +1,8 @@
 {% extends 'classes/layout.html' %}
 
 {% block content %}
-<div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px; padding:5%">
-    <h4 style="color:white;">Results</h4>
+<div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px;">
+    <h4 style="color:white;">Results for {{q}}</h4>
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
