--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -15,7 +15,7 @@
         {% endfor %}
     {% endif %}
     {% if not classes and not buildings %}
-        <img src="../../static/classes/images/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;height:25%;">
+        <img src="../../static/classes/images/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;">
     {% endif %}
 </ul>
 <a href="/test" class="btn">Go back</a>
