--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -18,6 +18,6 @@
         <img src="../../static/classes/images/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;">
     {% endif %}
 </ul>
-<a href="/test" class="btn">Go back</a>
+<a href="/" class="btn">Go back</a>
 </div>
 {% endblock %}
