--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -132,6 +132,7 @@ removed the cards
     var printers = L.layerGroup();
     var hotspots = L.layerGroup();
     var laundry = L.layerGroup();
+    var buildings = L.layerGroup();
 
     //var geojsonLayer = new L.GeoJSON.AJAX("scraping/shapes.json");
 
@@ -376,7 +377,8 @@ mymap.locate({setView: true, maxZoom: 15});
     var overlays = {
       "Printers": printers,
       "Laundry": laundry,
-    "Hotspots": hotspots
+    "Hotspots": hotspots,
+    "Buildings": buildings
     };
 
 
@@ -389,7 +391,7 @@ mymap.locate({setView: true, maxZoom: 15});
     map.options.maxZoom = 18;
 
     var geojson;
-  geojson = L.geoJson(buildingData).addTo(map);
+  geojson = L.geoJson(buildingData).addTo(buildings);
 
     // Displays current user location and accuracy
     /*function onLocationFound(e) {
@@ -472,3 +474,4 @@ mymap.locate({setView: true, maxZoom: 15});
 </html>
 
 {% endblock %}
+  
