--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <body bgcolor="#000000">
-<div id="topbar">
+<div id="searchbar" style="z-index: 1;">
+<div id="overlay" style="position:absolute; top:0px; left:0px; background-color:white; width:100%; height:50px; z-index: 100; opacity: 0.8">
 <form method="GET" action="{% url 'classes:search' %}">
     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
      <div style="width:30%; float:left;">
@@ -57,6 +58,7 @@
   <button class="btn btn-success" id="Logout">
       Logout
   </button>
+    </div>
     </div>
 
     <script type="text/javascript">
