--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -8,58 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <body bgcolor="#000000">
-<div id="searchbar" style="z-index: 1;">
-<div id="overlay" style="position:absolute; top:0px; left:0px; background-color:white; width:100%; height:50px; z-index: 100; opacity: 0.8">
-<form method="GET" action="{% url 'classes:search' %}">
-    <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
-     <div style="width:30%; float:left;">
-        <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
-        <button class="btn btn-success" type="submit">
-            Search ClassMaps
-        </button>
-    </div>
-    <div div style="width:30%; float:left;">
-    <label class="switch">
-      Monday
-      <input name = "q2" value = "M" type="checkbox">
-      <span class="slider"></span>
-    </label>
-    <label class="switch">
-      Tuesday
-      <input name = "q3" value = "T" type="checkbox">
-      <span class="slider"></span>
-    </label>
-    <label class="switch">
-      Wednesday
-      <input name = "q4" value = "W" type="checkbox">
-      <span class="slider"></span>
-    </label>
-    <label class="switch">
-      Thursday
-      <input name = "q5" value = "Th" type="checkbox">
-      <span class="slider"></span>
-    </label>
-    <label class="switch">
-      Friday
-      <input name = "q6" value = "F" type="checkbox">
-      <span class="slider"></span>
-    </label>
-      </div>
-    <div style="width:10%; float:left;">
-      <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
-        <input type="text" class="form-control" name="t" placeholder="Set Time">
-        <span class="input-group-addon">
-          <span class="glyphicon glyphicon-time"></span>
-        </span>
-      </div>
-    </div>
-</form>
-  <div>Welcome, {{netid}}</div>
-  <button class="btn btn-success" id="Logout">
-      Logout
-  </button>
-    </div>
-    </div>
+
 
     <script type="text/javascript">
         document.getElementById("Logout").onclick = function () {
@@ -139,6 +88,59 @@ removed the cards
   </div> -->
 </div>
   <div id="map"></div>
+  <div id="searchbar" style="z-index: 1;">
+<div id="overlay" style="position:absolute; top:0px; left:0px; background-color:white; width:100%; height:50px; z-index: 100; opacity: 0.8">
+<form method="GET" action="{% url 'classes:search' %}">
+    <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
+     <div style="width:30%; float:left;">
+        <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
+        <button class="btn btn-success" type="submit">
+            Search ClassMaps
+        </button>
+    </div>
+    <div div style="width:30%; float:left;">
+    <label class="switch">
+      Monday
+      <input name = "q2" value = "M" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Tuesday
+      <input name = "q3" value = "T" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Wednesday
+      <input name = "q4" value = "W" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Thursday
+      <input name = "q5" value = "Th" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Friday
+      <input name = "q6" value = "F" type="checkbox">
+      <span class="slider"></span>
+    </label>
+      </div>
+    <div style="width:10%; float:left;">
+      <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
+        <input type="text" class="form-control" name="t" placeholder="Set Time">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-time"></span>
+        </span>
+      </div>
+    </div>
+</form>
+  <div>Welcome, {{netid}}</div>
+  <button class="btn btn-success" id="Logout">
+      Logout
+  </button>
+    </div>
+</div>
+
   <script>
     // Adds different layer groups
     var printers = L.layerGroup();
@@ -402,33 +404,8 @@ mymap.locate({setView: true, maxZoom: 15});
     map.options.minZoom = 14;
     map.options.maxZoom = 18;
 
-      function highlightFeature(e) {
-  var layer = e.target;
-
-  layer.setStyle({
-    weight: 5,
-    color: '#666',
-    dashArray: '',
-    fillOpacity: 0.7
-  });
-
-  if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
-    layer.bringToFront();
-  }
-
-  //info.update(layer.feature.properties);
-}
-
-function onEachFeature(feature, layer) {
-  layer.on({
-    mouseover: highlightFeature//,
-    //mouseout: resetHighlight,
-    //click: zoomToFeature
-  });
-}
-
     var geojson;
-  geojson = L.geoJson(buildingData, {onEachFeature: onEachFeature}).addTo(buildings);
+  geojson = L.geoJson(buildingData).addTo(buildings);
 
     // Displays current user location and accuracy
     /*function onLocationFound(e) {
