--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -421,8 +421,8 @@ mymap.locate({setView: true, maxZoom: 15});
 
 function onEachFeature(feature, layer) {
   layer.on({
-    mouseover: highlightFeature//,
-    mouseout: resetHighlight,
+    mouseover: highlightFeature,//,
+    mouseout: resetHighlight
     //click: zoomToFeature
   });
 }
