removed layer bring to front

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -412,9 +412,9 @@ mymap.locate({setView: true, maxZoom: 15});
     fillOpacity: 0.7
   });
 
-  if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
-    layer.bringToFront();
-  }
+  //if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+  //  layer.bringToFront();
+  //}
 
   //info.update(layer.feature.properties);
 }
