--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -87,7 +87,7 @@ removed the cards
 <body bgcolor="#000000">
   <div id="map"></div>
   <div id="searchbar" style="z-index: 1;">
-<div id="overlay" style="position:absolute; top:0px; left:0px; background-color:white; width:100%; height:50px; z-index: 100; opacity: 0.8">
+<div id="overlay" style="position:absolute; top:0px; left:0px; background-color:white; width:100%; height:50px; z-index: 100;">
 <form method="GET" action="{% url 'classes:search' %}">
     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
      <div style="width:30%; float:left;">
