added clicking on buildings?

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -423,8 +423,12 @@ function onEachFeature(feature, layer) {
   layer.on({
     mouseover: highlightFeature,//,
     mouseout: resetHighlight
-    //click: zoomToFeature
+    click: zoomToFeature
   });
+}
+
+function zoomToFeature(e) {
+  map.fitBounds(e.target.getBounds());
 }
 
 function resetHighlight(e) {
