--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -422,7 +422,7 @@ mymap.locate({setView: true, maxZoom: 15});
 function onEachFeature(feature, layer) {
   layer.on({
     mouseover: highlightFeature,//,
-    mouseout: resetHighlight
+    mouseout: resetHighlight,
     click: zoomToFeature
   });
 }
