remove logout button

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -127,10 +127,11 @@ removed the cards
       </div>
     </div>
 </form>
+<!--     
   <div>Welcome, {{netid}}</div>
   <button class="btn btn-success" id="Logout">
       Logout
-  </button>
+  </button> -->
     </div>
 </div>
 
