--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
-
+<!-- 
     <form method="GET" action="{% url 'classes:search' %}">
     <div style="width:30%; float:left;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
@@ -50,7 +50,7 @@
         </span>
       </div>
     </div>
-</form>
+</form> -->
 
     
 <!-- {% if building %}
