--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -98,9 +98,9 @@ removed the cards
 
 
 <style>
-  html, body {
+/*   html, body {
    height: 100%;
-  }
+  } */
     topbar{
     height: 10%
     }
