--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -59,7 +59,7 @@ removed the cards
 /*     topbar{
     height: 10%
     } */
-  #map { width: 100%; height: 100%;}
+  #map { width: 1000px; height: 700px;}
   .slidecontainer {
       margin: 0 auto;
       width: 350px;
