--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px;">
-    <h4 style="color:white;">Results for: "{{q}}" {{t}}</h4>
+    <h4 style="color: white; float: left;">Results for: "{{q}}" {{t}}</h4>
+    <a href="/" class="btn" style="float: right;">Go back</a>
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
@@ -18,6 +19,5 @@
         <img src="../../static/classes/images/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;">
     {% endif %}
 </ul>
-<a href="/" class="btn">Go back</a>
 </div>
 {% endblock %}
