--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 <div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px;">
-    <h4 style="color: white; float: left;">Results for: "{{q}}" {{t}}</h4>
-    <a href="/" class="btn" style="float: right;">Go back</a>
-    <br>
+    <h4 style="color: white;">Results for: "{{q}}" {{t}}</h4>
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
@@ -20,5 +18,6 @@
         <img src="../../static/classes/images/calvinandhobbes.png" alt="NotFound" class="center" style="width:100%;">
     {% endif %}
 </ul>
+<a href="/" class="btn">Go back</a>
 </div>
 {% endblock %}
