--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -404,6 +404,19 @@ mymap.locate({setView: true, maxZoom: 15});
     map.options.minZoom = 14;
     map.options.maxZoom = 18;
 
+    function getColor(d) {
+  if (d == 'dormitory') return '#800026';
+  else return '#FED976';
+  /*return d > 1000 ? '#800026' :
+      d > 500  ? '#BD0026' :
+      d > 200  ? '#E31A1C' :
+      d > 100  ? '#FC4E2A' :
+      d > 50   ? '#FD8D3C' :
+      d > 20   ? '#FEB24C' :
+      d > 10   ? '#FED976' :
+            '#FFEDA0';*/
+}
+
 
     function style(feature) {
   return {
@@ -412,8 +425,8 @@ mymap.locate({setView: true, maxZoom: 15});
     color: 'white',
     dashArray: '3',
     fillOpacity: 0.7,
-    //fillColor: getColor(feature.properties.density)
-    fillColor: '#FED976'
+    fillColor: getColor(feature.properties.building)
+    //fillColor: '#FED976'
   };
 }
 
