--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -53,10 +53,12 @@
       </div>
     </div>
 </form>
-      <div>Welcome, {{netid}}</div>
+<div style="float: right">
+<div  class="center-div">Welcome, {{netid}}</div>
   <button class="btn btn-success" id="Logout">
       Logout
   </button>
+ <div>
 
 <!-- {% if building %}
 removed the cards
