--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -58,7 +58,7 @@
   <button class="btn btn-success" id="Logout">
       Logout
   </button>
- <div>
+ </div>
 
 <!-- {% if building %}
 removed the cards
