Added more color of dorms

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -408,6 +408,7 @@ mymap.locate({setView: true, maxZoom: 15});
 
     function getColor(d) {
   if (d == 'dormitory') return '#800026';
+  else if (d == 'university') return '#FEB24C';
   else return '#FED976';
   /*return d > 1000 ? '#800026' :
       d > 500  ? '#BD0026' :
