--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -408,7 +408,7 @@ mymap.locate({setView: true, maxZoom: 15});
 
     function getColor(d) {
   if (d == 'dormitory') return '#800026';
-  else if (d == 'university') return '#FEB24C';
+  else if (d == 'university') return '#FEB42C';
   else return '#FED976';
   /*return d > 1000 ? '#800026' :
       d > 500  ? '#BD0026' :
@@ -469,6 +469,30 @@ function resetHighlight(e) {
 
     var geojson;
   geojson = L.geoJson(buildingData, {style: style, onEachFeature: onEachFeature}).addTo(buildings);
+
+  var legend = L.control({position: 'bottomright'});
+
+legend.onAdd = function (map) {
+
+  var div = L.DomUtil.create('div', 'info legend'),
+    grades = ['dormitory', 'university', 'other'],
+    labels = [],
+    from, to;
+
+  for (var i = 0; i < grades.length; i++) {
+    from = grades[i];
+    //to = grades[i + 1];
+
+    labels.push(
+      '<i style="background:' + getColor(from) + '"></i> ' +
+      from + (from ? '&ndash;' + from : '+'));
+  }
+
+  div.innerHTML = labels.join('<br>');
+  return div;
+};
+
+legend.addTo(map);
 
     // Displays current user location and accuracy
     /*function onLocationFound(e) {
