made legend to buildings only

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -492,7 +492,7 @@ legend.onAdd = function (map) {
   return div;
 };
 
-legend.addTo(map);
+legend.addTo(buildings);
 
     // Displays current user location and accuracy
     /*function onLocationFound(e) {
