--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -473,7 +473,7 @@ function resetHighlight(e) {
 
   var legend = L.control({position: 'bottomright'});
 
-legend.onAdd = function (map) {
+legend.onAdd = function (buildings) {
 
   var div = L.DomUtil.create('div', 'info legend'),
     grades = ['dormitory', 'university', 'other'],
