--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -193,7 +193,7 @@ success: function(data) {
  ['40.347788', '-74.656319', 'Architecture Library - 2nd Floor', '28'],
  ['40.34673', '-74.655259', 'East Asian Library - Frist Campus Center', '28'],
  ['40.346412', '-74.655946', 'East Asian Library - Jones Hall', '28'],
- ['40.350268', '-74.652827', 'Engineering Library - 2nd Floor', '28'],
+ //['40.350268', '-74.652827', 'Engineering Library - 2nd Floor', '28'],
  ['40.345701', '-74.652474', 'Fine Hall Library - Basement', '28'],
  ['40.349582', '-74.657495', 'Firestone Library - 1st Floor, Reserve', '28'],
  ['40.349582', '-74.657495', 'Firestone Library - 3rd Floor', '28'],
