even more testing

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -172,7 +172,8 @@ success: function(data) {
  ['40.349582', '-74.657495', 'Firestone Library - Room B-4-K', '6'],
  ['40.342214', '-74.661144', 'Forbes College - Library, Room 32', '6'],
  ['40.342214', '-74.661144', 'Forbes College - Rooms 21, 22', '6'],
- ['40.350268', '-74.652827', 'Friend Center - Room 016\nFriend Center - Room 017', '6'],
+ ['40.350268', '-74.652827', 'Friend Center - Room 016\
+ Friend Center - Room 017', '6'],
  //['40.350268', '-74.652827', 'Friend Center - Room 017', '6'],
  ['40.34673', '-74.655259', 'Frist Campus Center - 100 Level', '6'],
  ['40.34673', '-74.655259', 'Frist Campus Center - 200 Level', '6'],
