--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -86,7 +86,7 @@ removed the cards
   <script type="text/javascript" src="{% static 'classes/buildings.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/printers.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/laundry.js' %}"></script>
-  <script type="text/javascript" src="{% static 'classes/hospots.js' %}"></script> 
+  <script type="text/javascript" src="{% static 'classes/hotpots.js' %}"></script> 
 
   <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
