added buildings to homepage

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -209,7 +209,7 @@ document.getElementById("Logout").onclick = function () {
     var map = L.map('map', {
       center: [40.346, -74.653],
       zoom: 16,
-      layers: [regular]
+      layers: [regular, buildings]
     });
     /*$('.pure-button').on('click', function(){
 mymap.locate({setView: true, maxZoom: 15});
