--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -17,11 +17,11 @@
             Search ClassMaps
         </button>
     </div>
-    <div div style="width:30%; float:left;">
+    <div div style="float:left;">
         
     <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Day of the Week
+      Filter by Day
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
       <label class="switch">
