--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
-
+<script>
+/*
     <form method="GET" action="{% url 'classes:search' %}">
         <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
 
@@ -59,7 +60,8 @@
       Logout
   </button>
  </div>
-
+*/
+</script>
 <!-- {% if building %}
 removed the cards
 <div class="card">
@@ -111,12 +113,28 @@ removed the cards
 /*     topbar{
     height: 10%
     } */
-  #map { width: 100%; height: 100%;}
+    #map {
+        height: 100%;
+        width: 100%;
+        float: left;
+        z-index: 1;
+        position: relative;
+    }
   .slidecontainer {
       margin: 0 auto;
       width: 350px;
   }
   .btn-remove {background-color: #f44336;} /* red */
+
+  .overlay {
+    height: 100px;
+    width: 100%;
+    margin-left: -100%;
+    position: relative;
+    float: right;
+    z-index: 2;
+    pointer-events: auto;
+  }
 </style>
 </head>
 
@@ -133,10 +151,59 @@ removed the cards
   </div> -->
 <body bgcolor="#000000">
   <div id="map"></div>
-  <div id="searchbar" style="z-index: 1;">
-<div id="overlay" style="position:absolute; top:0px; left:0px; background-color:white; width:100%; height:auto; z-index: 100; opacity: 0.8;">
+  <div id="overlay" class="overlay">
+    <form method="GET" action="{% url 'classes:search' %}">
+        <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
+
+    <div style="width:30%; float:left;">
+        <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
+        <button class="btn btn-success" type="submit">
+            Search ClassMaps
+        </button>
     </div>
-</div>
+    <div div style="width:30%; float:left;">
+    <label class="switch">
+      Monday
+      <input name = "q2" value = "M" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Tuesday
+      <input name = "q3" value = "T" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Wednesday
+      <input name = "q4" value = "W" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Thursday
+      <input name = "q5" value = "Th" type="checkbox">
+      <span class="slider"></span>
+    </label>
+    <label class="switch">
+      Friday
+      <input name = "q6" value = "F" type="checkbox">
+      <span class="slider"></span>
+    </label>
+      </div>
+    <div style="width:10%; float:left;">
+      <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
+        <input type="text" class="form-control" name="t" placeholder="Set Time">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-time"></span>
+        </span>
+      </div>
+    </div>
+</form>
+<div style="float: right">
+<div  class="center-div">Welcome, {{netid}}</div>
+  <button class="btn btn-success" id="Logout">
+      Logout
+  </button>
+ </div>
+  </div>
 
 <script type="text/javascript">
 document.getElementById("Logout").onclick = function () {
@@ -450,7 +517,7 @@ legend.onAdd = function (buildings) {
   div.innerHTML = labels.join('<br>');
   return div;
 };
-legend.addTo(buildings);
+//legend.addTo(buildings);
     // Displays current user location and accuracy
     /*function onLocationFound(e) {
       var radius = e.accuracy / 2;
