--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -7,84 +7,6 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
-<script>
-/*
-    <form method="GET" action="{% url 'classes:search' %}">
-        <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="15" vspace="10">
-
-    <div style="width:30%; float:left;">
-        <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
-        <button class="btn btn-success" type="submit">
-            Search ClassMaps
-        </button>
-    </div>
-    <div div style="float:left;">
-
-    <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Filter by Day
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <label class="switch">
-        Monday
-        <input name = "q2" value = "M" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Tuesday
-        <input name = "q3" value = "T" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Wednesday
-        <input name = "q4" value = "W" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Thursday
-        <input name = "q5" value = "Th" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Friday
-        <input name = "q6" value = "F" type="checkbox">
-        <span class="slider"></span>
-      </label>
-        </div>
-    </div>
-    </div>
-    <div style="width:10%; float:left;">
-      <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
-        <input type="text" class="form-control" name="t" placeholder="Set Time">
-        <span class="input-group-addon">
-          <span class="glyphicon glyphicon-time"></span>
-        </span>
-      </div>
-    </div>
-</form>
-<div style="float: right">
-<div  class="center-div">Welcome, {{netid}}</div>
-  <button class="btn btn-success" id="Logout">
-      Logout
-  </button>
- </div>
-*/
-</script>
-<!-- {% if building %}
-removed the cards
-<div class="card">
-    <div class="card-content">
-        {{building.building}}
-    </div>
-</div>
-{% elif c %}
-    <div class="card">
-        <h6 class="center-align">{{c}}</h6>
-        <div class="card-content">
-            {{c.building}} {{c.room}} {{c.day}} {{c.starttime}}-{{c.endtime}}
-        </div>
-    </div>
-{% endif %} -->
 
 <head bgcolor="#000000">
   <title>ClassMaps</title>
@@ -145,6 +67,7 @@ removed the cards
     float: right;
     z-index: 2;
     pointer-events: auto;
+    opacity: 0.5;
   }
 </style>
 </head>
