change placeholder color

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -69,6 +69,18 @@
     pointer-events: auto;
     opacity: 0.5;
   }
+  ::placeholder {
+    color: DIMGRAY;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color: DIMGRAY;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+   color: DIMGRAY;
+}
 </style>
 </head>
 
