--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -66,6 +66,7 @@
     position: relative;
     float: right;
     z-index: 2;
+    background-color:GAINSBORO;
     pointer-events: auto;
     opacity: 0.5;
   }
