--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -68,6 +68,7 @@
     z-index: 2;
     background-color:GAINSBORO;
     pointer-events: auto;
+    opacity: 0.8;
   }
   ::placeholder {
     color: DIMGRAY;
