--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -246,7 +246,7 @@ mymap.locate({setView: true, maxZoom: 15});
     "Buildings": buildings
     };
     // Adds overlays and layers to map
-    L.control.layers(baseLayers, overlays, {position: 'topleft'}).addTo(map);
+    L.control.layers(baseLayers, overlays, {position: 'bottomright'}).addTo(map);
     // Limits zoom (we could get rid of this)
     map.options.minZoom = 14;
     map.options.maxZoom = 18;
