--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -7,6 +7,30 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+
+  <script type="text/javascript" src="{% static 'classes/buildings.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/printers.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/laundry.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/hotspots.js' %}"></script>
+
+  <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
+  <script type="text/javascript">
+    $('.clockpicker').clockpicker({
+      twelvehour: true,
+    })
+    .find('input').change(function(){
+      console.log(this.value);
+    });
+    var input = $('#single-input').clockpicker({
+      placement: 'bottom',
+      align: 'right',
+      autoclose: true,
+      default: 'now'
+    });
+</script>
 
 <head bgcolor="#000000">
   <title>ClassMaps</title>
