--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -65,9 +65,8 @@
     position: relative;
     float: right;
     z-index: 2;
-    background-color:GAINSBORO;
+    background-color:rgba(0,0,0,.5); // Sets to 50% transparent;
     pointer-events: auto;
-    opacity: 0.8;
   }
   ::placeholder {
     color: DIMGRAY;
