--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -69,16 +69,14 @@
     pointer-events: auto;
   }
   ::placeholder {
-    color: DIMGRAY;
+    color: white;
     opacity: 1; /* Firefox */
 }
-
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color: DIMGRAY;
+   color: white;
 }
-
 ::-ms-input-placeholder { /* Microsoft Edge */
-   color: DIMGRAY;
+   color: white;
 }
 </style>
 </head>
