fix input colors

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -69,21 +69,21 @@
     pointer-events: auto;
   }
   ::placeholder {
-    color: white;
+    color: #d3d3d3;
     opacity: 1; /* Firefox */
   }
   :-ms-input-placeholder { /* Internet Explorer 10-11 */
-     color: white;
+     color: #d3d3d3;
   }
   ::-ms-input-placeholder { /* Microsoft Edge */
-     color: white;
+     color: #d3d3d3;
   }
   input, select, textarea{
-    color: #ff0000;
+    color: white;
   }
 
   textarea:focus, input:focus {
-      color: #ff0000;
+      color: white;
   }
 </style>
 </head>
