--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -68,6 +68,10 @@
     background-color:rgba(0,0,0,.5); // Sets to 50% transparent;
     pointer-events: auto;
   }
+  .dropdown-menu{
+    background-color:rgba(0,0,0,.5); // Sets to 50% transparent;
+    color: white;
+  }
   ::placeholder {
     color: #d3d3d3;
     opacity: 1; /* Firefox */
