--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -69,8 +69,7 @@
     pointer-events: auto;
   }
   .dropdown-menu{
-    background-color:rgba(0,0,0,.5); // Sets to 50% transparent;
-    color: white;
+    background-color:	#D3D3D3;
   }
   ::placeholder {
     color: #d3d3d3;
