--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
   <script type="text/javascript" src="{% static 'classes/buildings.js' %}"></script>
@@ -57,7 +59,6 @@
       width: 350px;
   }
   .btn-remove {background-color: #f44336;} /* red */
-
   .overlay {
     height: auto;
     width: 100%;
@@ -94,6 +95,15 @@
     margin:0;
     padding:0;
   }
+  .btn {
+    background-color: none;
+    border:  2px solid white;
+    border-radius: 8px;
+    color: white;
+    padding: 12px 16px;
+    font-size: 16px;
+    cursor: pointer;
+  }
 </style>
 </head>
 
@@ -107,14 +117,14 @@
     <div style="width:30%; float:left;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
         <button class="btn btn-success" type="submit">
-            Search ClassMaps
+            <i class="fa fa-search">Search ClassMaps</i>
         </button>
     </div>
     <div div style="float:left;">
 
     <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Filter by Day
+      <i class="fa fa-calendar"></i>
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
       <label class="switch">
