--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -113,9 +113,6 @@
 
     <div style="width:30%; float:left;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
-        <button class="btn btn-success" type="submit">
-            <i class="fa fa-search">Search ClassMaps</i>
-        </button>
     </div>
     <div div style="float:left;">
 
@@ -152,13 +149,16 @@
         </div>
     </div>
     </div>
-    <div style="width:10%; float:left;">
+    <div style="width:20%; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
         <input type="text" class="form-control" name="t" placeholder="Set Time">
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span>
       </div>
+      <button class="btn btn-success" type="submit">
+        <i class="fa fa-search"></i>Search ClassMaps
+      </button>
     </div>
 </form>
 <div style="float: right">
