adjust search bar

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -100,6 +100,8 @@
     border-radius: 8px;
     color: white;
     cursor: pointer;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 </style>
 </head>
