fix search again

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -100,6 +100,8 @@
     border-radius: 8px;
     color: white;
     cursor: pointer;
+  }
+  .fa{
     padding-right: 10px;
     padding-left: 10px;
   }
@@ -151,17 +153,19 @@
         </div>
     </div>
     </div>
-    <div style="width:20%; float:left;">
+    <div style="width:10%; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
         <input type="text" class="form-control" name="t" placeholder="Set Time">
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span>
       </div>
+    </div>
+    <div style="float:left;">
       <button class="btn btn-success" type="submit">
         <i class="fa fa-search"></i>Search ClassMaps
       </button>
-    </div>
+      </div>
 </form>
 <div style="float: right">
 <div  class="center-div">
