--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -113,7 +113,7 @@
   <div id="overlay" class="overlay">
     <div style="opacity: 1.0">
     <form method="GET" action="{% url 'classes:search' %}">
-     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="0.5%" vspace="10">
+     <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="0.5%">
 
     <div style="width:30%; float:left;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
