--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
   <script type="text/javascript" src="{% static 'classes/buildings.js' %}"></script>
@@ -109,6 +110,19 @@
 </head>
 
 <body bgcolor="#000000">
+  
+    <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0;" id="mySidebar">
+    <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
+      <a href="#" class="w3-bar-item w3-button">Welcome, atong</a>
+      <a href="#" class="w3-bar-item w3-button">My Saved Courses</a>
+      <a href="#" class="w3-bar-item w3-button">Trending</a>
+      <a href="#" class="w3-bar-item w3-button">About</a>
+      <a href="#" class="w3-bar-item w3-button">Help</a>
+      <a href="#" class="w3-bar-item w3-button">Feedback</a>
+      <a href="#" class="w3-bar-item w3-button">Sign Out</a>
+    </div>
+  
+  <div class="w3-container">
   <div id="map"></div>
   <div id="overlay" class="overlay">
     <div style="opacity: 1.0">
@@ -174,16 +188,28 @@
       Sign Out
   </button>
  </div>
+  
+   <button class="w3-button w3-teal w3-xlarge w3-right w3-hide-large" onclick="w3_open()">&#9776;</button>
   </div>
     </div>
  </div>
 </div>
+  </div>
 
 <script type="text/javascript">
 document.getElementById("Logout").onclick = function () {
     location.href = "https://classmaps.herokuapp.com/accounts/logout";
 };
 </script>
+<script>
+function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+}
+function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+}
+</script>
+  
   <script> 
     // Adds different layer groups
     var printers = L.layerGroup();
