--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--  Add style for sidebar -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
@@ -50,7 +51,7 @@
     } */
     #map {
         height: 100%;
-        width: 100%;
+        width: auto;
         float: left;
         z-index: 1;
         position: relative;
@@ -62,7 +63,7 @@
   .btn-remove {background-color: #f44336;} /* red */
   .overlay {
     height: auto;
-    width: 100%;
+    width: auto;
     margin-left: -100%;
     position: relative;
     float: right;
