--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -126,6 +126,7 @@
       <i class="fa fa-calendar"></i>
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <div id="myDropdown" class="dropdown-content">
       <label class="switch">
         Monday
         <input name = "q2" value = "M" type="checkbox">
@@ -153,6 +154,7 @@
       </label>
         </div>
     </div>
+      </div>
     </div>
     <div style="width:10%; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
