--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -41,121 +41,120 @@
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
 
-<style>
+  <style>
       html, body {
        height: 100%;
       }
-/*     topbar{
-    height: 10%
-    } */
-    #map {
-        height: 100%;
-        width: 100%;
-        float: left;
-        z-index: 1;
-        position: relative;
+      #map {
+          height: 100%;
+          width: 100%;
+          float: left;
+          z-index: 1;
+          position: relative;
+      }
+    .slidecontainer {
+        margin: 0 auto;
+        width: 350px;
     }
-  .slidecontainer {
-      margin: 0 auto;
-      width: 350px;
-  }
-  .btn-remove {background-color: #f44336;} /* red */
-  .overlay {
-    height: auto;
-    width: 100%;
-    margin-left: -100%;
-    position: relative;
-    float: right;
-    z-index: 2;
-    background-color:rgba(0,0,0,.5); // Sets to 50% transparent;
-    pointer-events: auto;
-  }
-  .dropdown-menu{
-    background-color:	#D3D3D3;
-  }
-  ::placeholder {
-    color: #d3d3d3;
-    opacity: 1; /* Firefox */
-  }
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-     color: #d3d3d3;
-  }
-  ::-ms-input-placeholder { /* Microsoft Edge */
-     color: #d3d3d3;
-  }
-  input, select, textarea{
-    color: white;
-  }
-  textarea:focus, input:focus {
+    .btn-remove {background-color: #f44336;} /* red */
+    .overlay {
+      height: auto;
+      width: 100%;
+      margin-left: -100%;
+      position: relative;
+      float: right;
+      z-index: 2;
+      background-color:rgba(0,0,0,.5); // Sets to 50% transparent;
+      pointer-events: auto;
+    }
+    .dropdown-menu{
+      background-color:	#D3D3D3;
+    }
+    ::placeholder {
+      color: #d3d3d3;
+      opacity: 1; /* Firefox */
+    }
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+       color: #d3d3d3;
+    }
+    ::-ms-input-placeholder { /* Microsoft Edge */
+       color: #d3d3d3;
+    }
+    input, select, textarea{
       color: white;
-  }
-  .astext {
-    background:none;
-    border:none;
-    color: orange;
-    margin:0;
-    padding:0;
-  }
-  .btn {
-    background-color: none;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-  }
-  .fa{
-    padding-right: 5px;
-    padding-left: 5px;
-  }
-</style>
+    }
+    textarea:focus, input:focus {
+        color: white;
+    }
+    .astext {
+      background:none;
+      border:none;
+      color: orange;
+      margin:0;
+      padding:0;
+    }
+    .btn {
+      background-color: none;
+      border-radius: 4px;
+      color: white;
+      cursor: pointer;
+    }
+    .fa{
+      padding-right: 5px;
+      padding-left: 5px;
+    }
+    .dropdown-menu{
+      width: 40px;
+    }
+  </style>
 </head>
 
 <body bgcolor="#000000">
   <div id="map"></div>
+
   <div id="overlay" class="overlay">
-    <div style="opacity: 1.0">
     <form method="GET" action="{% url 'classes:search' %}">
      <img src="{% static 'classes/images/toolbar.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="0.5%">
 
     <div style="width:30%; float:left;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
-    <div div style="float:left;">
 
+   <div div style="float:left;">
     <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fa fa-calendar"></i>
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <div id="myDropdown" class="dropdown-content">
-      <label class="switch">
-        Monday
-        <input name = "q2" value = "M" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Tuesday
-        <input name = "q3" value = "T" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Wednesday
-        <input name = "q4" value = "W" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Thursday
-        <input name = "q5" value = "Th" type="checkbox">
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        Friday
-        <input name = "q6" value = "F" type="checkbox">
-        <span class="slider"></span>
-      </label>
+        <label class="switch">
+          Monday
+          <input name = "q2" value = "M" type="checkbox">
+          <span class="slider"></span>
+        </label>
+        <label class="switch">
+          Tuesday
+          <input name = "q3" value = "T" type="checkbox">
+          <span class="slider"></span>
+        </label>
+        <label class="switch">
+          Wednesday
+          <input name = "q4" value = "W" type="checkbox">
+          <span class="slider"></span>
+        </label>
+        <label class="switch">
+          Thursday
+          <input name = "q5" value = "Th" type="checkbox">
+          <span class="slider"></span>
+        </label>
+        <label class="switch">
+          Friday
+          <input name = "q6" value = "F" type="checkbox">
+          <span class="slider"></span>
+        </label>
         </div>
     </div>
-      </div>
-    </div>
+  </div>
+
     <div style="width:10%; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
         <input type="text" class="form-control" name="t" placeholder="Set Time">
@@ -164,23 +163,23 @@
         </span>
       </div>
     </div>
+
     <div style="float:left;">
       <button class="btn btn-success" type="submit">
         <i class="fa fa-search"></i>Search ClassMaps
       </button>
       </div>
 </form>
-<div style="float: right">
-<div  class="center-div">
-  <p style="color: #ffffff;">Welcome, {{netid}}</p>
-  <button class="astext" id="Logout">
-      Sign Out
-  </button>
- </div>
+
+  <div style="float: right; width: 10%; margin: auto;">
+    <p style="color: #ffffff;">Welcome, {{netid}}</p>
+    <button class="astext" id="Logout">
+        Sign Out
+    </button>
   </div>
-    </div>
- </div>
-</div>
+
+ </div> 
+ <!-- overlay div ends -->
 
 <script type="text/javascript">
 document.getElementById("Logout").onclick = function () {
