--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -6,7 +6,7 @@
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
-          <li class="collection-item"><a href="/buildings/{{b}}">{{b}}</a></li>
+          <li class="collection-item"><a href="/buildings/{{b}}">{{b}} {{b.names|last}}</a></li>
         {% endfor %}
     {% endif %}
     {% if classes %}
