move zoom control to the right

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -253,7 +253,7 @@ document.getElementById("Logout").onclick = function () {
       layers: [regular, buildings],
       zoomControl: true
     });
-    map.zoomControl.setPosition('bottomleft');
+    map.zoomControl.setPosition('bottomright');
     /*$('.pure-button').on('click', function(){
 mymap.locate({setView: true, maxZoom: 15});
 });*/
